--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -4,6 +4,21 @@
   <strong>Name:</strong>
   <%= @restaurant.name %>
 </p>
+<p>
+  <ul>
+  <% @restaurant.reviews.each do |review| %>
+  <li>
+    <%= review.content %>
+  </li>
+<% end %>
+</ul>
+</p>
 
+<%= link_to "laisser un commentaire", new_restaurant_review_path(@restaurant) %> |
 <%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
 <%= link_to 'Back', restaurants_path %>
+
+
+
+
+
